<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

	<groupId>Eternity</groupId>
    <artifactId>EternityTTRPG</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
    </properties>

    <dependencies>	
		<dependency>
    		<groupId>com.fasterxml.jackson.core</groupId>
    		<artifactId>jackson-databind</artifactId>
    		<version>2.9.0.pr2</version>
		</dependency>
		<dependency>
    		<groupId>com.fasterxml.jackson.datatype</groupId>
    		<artifactId>jackson-datatype-jsr310</artifactId>
    		<version>2.9.0.pr2</version>
		</dependency>
	</dependencies>

    <build>
        <finalName>EternityTTRPG</finalName>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.5.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>eternity.EternityMain</mainClass>
                                </transformer>
                            </transformers>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>windows-exe</id>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-antrun-plugin</artifactId>
                        <version>3.1.0</version>
                        <executions>
                            <execution>
                                <id>prepare-jpackage-input</id>
                                <phase>package</phase>
                                <configuration>
                                    <target>
                                        <mkdir dir="${project.build.directory}/jpackage-input"/>
                                        <copy file="${project.build.directory}/EternityTTRPG.jar"
                                              tofile="${project.build.directory}/jpackage-input/EternityTTRPG.jar"/>
                                        <copy todir="${project.build.directory}/jpackage-input/Data">
                                            <fileset dir="${project.basedir}/Data"/>
                                        </copy>
                                        <copy todir="${project.build.directory}/jpackage-input/Characters">
                                            <fileset dir="${project.basedir}/Characters"/>
                                        </copy>
                                        <copy todir="${project.build.directory}/jpackage-input/Images">
                                            <fileset dir="${project.basedir}/Images"/>
                                        </copy>
                                    </target>
                                </configuration>
                                <goals>
                                    <goal>run</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>

                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>exec-maven-plugin</artifactId>
                        <version>3.3.0</version>
                        <executions>
                            <execution>
                                <id>jpackage-app-image</id>
                                <phase>package</phase>
                                <goals>
                                    <goal>exec</goal>
                                </goals>
                                <configuration>
                                    <executable>jpackage</executable>
                                    <arguments>
                                        <argument>--type</argument>
                                        <argument>app-image</argument>
                                        <argument>--name</argument>
                                        <argument>EternityTTRPG</argument>
                                        <argument>--input</argument>
                                        <argument>${project.build.directory}/jpackage-input</argument>
                                        <argument>--main-jar</argument>
                                        <argument>EternityTTRPG.jar</argument>
                                        <argument>--main-class</argument>
                                        <argument>eternity.EternityMain</argument>
                                        <argument>--dest</argument>
                                        <argument>${project.build.directory}/dist</argument>
                                        <argument>--vendor</argument>
                                        <argument>Eternity</argument>
                                        <argument>--app-version</argument>
                                        <argument>${project.version}</argument>
                                    </arguments>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
